Add Endpoint & Method To Get Connected User
